# Project-Append

./: .angular-cli.json  .angulardoc.json  .htaccess  LICENSE  README.md  app.js  changelog.md  package-lock.json  package.json  package.json_old  tsconfig.json  webpack.config.js  webpack.config.js.dev  webpack.config.js.orig  webpack.config.js.prod
angular-src/: README.md  angular-cli.json  angular.json  package-lock.json  package.json
angular-src/old/: angular.json  package.json
angular-src/src/: index.html  main.ts  styles.css
angular-src_v2/: package-lock.json  package.json
angular-src_v2/src/: index.html  styles.scss
angular-src_v3/: angular.json  package-lock.json  package.json
angular-src_v3/src/: index.html  styles.css
angularcli-meteor/: README.md  package-lock.json  package.json  webpack.config.js  webpack.config.js.prod
angularcli-meteor/api/: package-lock.json
api/: package-lock.json  package.json  server.js
api/.meteor/: .id
api/grpc_api/: Cargo.toml
api/grpc_api/proto/: services.proto
api/grpc_api/src/: main.rs
api_v2/: package-lock.json  package.json  server.js
database/config/: database.js  passport.js
database/models/: tempUser.js  user.js
e2e/: tsconfig.e2e.json
frontend/src/: index.html
fuse/: angular.json  package-lock.json  package.json
fuse/src/: index.html  styles.scss
old/angular-src/: angular.json  package-lock.json  (+1 more)
routes/: auth.js  users.js
scripts/: envoy.yaml  start  typescript_protos_compile.sh
src/: styles.scss  tsconfig.app.json  tsconfig.spec.json
test/: package-lock.json  package.json
(+392 files in other folders)
